--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature1-SearchSkills/search.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature1-SearchSkills/search.html
@@ -1,156 +1,169 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/layout.html :: html_head"/>
+
+<head th:replace="fragments/layout.html :: html_head" />
+
 <body>
-<div th:replace="fragments/layout.html :: menu"/>
-<head>
-</head>
-<body>
-<div class="wrapper">
-    <div class="container">
-        <blockquote class="blockquote">
-            <center><p class="mb-0"><span style="color:#ad2eb3; font-weight: bold; font-size:xx-large" >Understand the skills you need to achieve your dream job</span></p></center>
-        </blockquote>
+    <div th:replace="fragments/layout.html :: menu" />
 
-        <div id="resp-table">
-            <table align="center">
-                <tr>
-                    <td>
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                            Job
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" th:href="@{/search/courses/home}">skill</a></li>
-                        </ul>
+    <head>
+    </head>
 
-                    </td>
-                    <td>
-                        <form id="myForm" autocomplete="off" style="width: 800px;" th:action="@{/search/skills/result}" method="GET">
-                                <span class="autocomplete form-outline input-group">
-                                <input id="job" type="text" name="job" placeholder="Enter your dream role" class="form-control">
-                                    <a class="btn btn-secondary" href="#" onclick="validateJobTitle();" role="button"> <i class="bi-search"></i></a>
-                        </form>
-                    <td>
-                <tr>
-                    <td colspan="2">
-                        <center><p id="message"></p></center>
-                    </td>
-                </tr>
+    <body>
+        <div class="wrapper">
+            <div class="container">
+                <blockquote class="blockquote">
+                    <center>
+                        <p class="mb-0"><span style="color:#ad2eb3; font-weight: bold; font-size:xx-large">Understand
+                                the skills you need to achieve your dream job</span></p>
+                    </center>
+                </blockquote>
 
-            </table>
+                <div id="resp-table">
+                    <table align="center">
+                        <tr>
+                            <td>
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    Job
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                    <li><a class="dropdown-item" th:href="@{/search/courses/home}">skill</a></li>
+                                </ul>
+
+                            </td>
+                            <td>
+                                <form id="myForm" autocomplete="off" style="width: 800px;"
+                                    th:action="@{/search/skills/result}" method="GET">
+                                    <span class="autocomplete form-outline input-group">
+                                        <input id="job" type="text" name="job" placeholder="Enter your dream role"
+                                            class="form-control">
+                                        <a class="btn btn-secondary" href="#" onclick="validateJobTitle();"
+                                            role="button"> <i class="bi-search"></i></a>
+                                </form>
+                            <td>
+                        <tr>
+                            <td colspan="2">
+                                <center>
+                                    <p id="message"></p>
+                                </center>
+                            </td>
+                        </tr>
+
+                    </table>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
 
-<script th:inline="javascript">
-    function autocomplete(inp, arr) {
-        var currentFocus;
-        inp.addEventListener("input", function(e) {
-            var a, b, i, val = this.value;
-            closeAllLists();
-            if (!val) { return false;}
-            currentFocus = -1;
-            a = document.createElement("DIV");
-            a.setAttribute("id", this.id + "autocomplete-list");
-            a.setAttribute("class", "autocomplete-items");
-            this.parentNode.appendChild(a);
-            for (i = 0; i < arr.length; i++) {
-                if (arr[i].substr(0, val.length).toUpperCase() == val.toUpperCase()) {
-                    b = document.createElement("DIV");
-                    b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
-                    b.innerHTML += arr[i].substr(val.length);
-                    b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
-                    b.addEventListener("click", function(e) {
-                        inp.value = this.getElementsByTagName("input")[0].value;
-                        closeAllLists();
-                    });
-                    a.appendChild(b);
+        <script th:inline="javascript">
+            function autocomplete(inp, arr) {
+                var currentFocus;
+                inp.addEventListener("input", function (e) {
+                    var a, b, i, val = this.value;
+                    closeAllLists();
+                    if (!val) { return false; }
+                    currentFocus = -1;
+                    a = document.createElement("DIV");
+                    a.setAttribute("id", this.id + "autocomplete-list");
+                    a.setAttribute("class", "autocomplete-items");
+                    this.parentNode.appendChild(a);
+                    for (i = 0; i < arr.length; i++) {
+                        if (arr[i].substr(0, val.length).toUpperCase() == val.toUpperCase()) {
+                            b = document.createElement("DIV");
+                            b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
+                            b.innerHTML += arr[i].substr(val.length);
+                            b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
+                            b.addEventListener("click", function (e) {
+                                inp.value = this.getElementsByTagName("input")[0].value;
+                                closeAllLists();
+                            });
+                            a.appendChild(b);
+                        }
+                    }
+                });
+                inp.addEventListener("keydown", function (e) {
+                    var x = document.getElementById(this.id + "autocomplete-list");
+                    if (x) x = x.getElementsByTagName("div");
+                    if (e.keyCode == 40) {
+                        currentFocus++;
+                        addActive(x);
+                    } else if (e.keyCode == 38) { //up
+                        currentFocus--;
+                        addActive(x);
+                    } else if (e.keyCode == 13) {
+                        e.preventDefault();
+                        if (currentFocus > -1) {
+                            if (x) x[currentFocus].click();
+                        }
+                    }
+                });
+                function addActive(x) {
+                    if (!x) return false;
+                    removeActive(x);
+                    if (currentFocus >= x.length) currentFocus = 0;
+                    if (currentFocus < 0) currentFocus = (x.length - 1);
+                    x[currentFocus].classList.add("autocomplete-active");
                 }
-            }
-        });
-        inp.addEventListener("keydown", function(e) {
-            var x = document.getElementById(this.id + "autocomplete-list");
-            if (x) x = x.getElementsByTagName("div");
-            if (e.keyCode == 40) {
-                currentFocus++;
-                addActive(x);
-            } else if (e.keyCode == 38) { //up
-                currentFocus--;
-                addActive(x);
-            } else if (e.keyCode == 13) {
-                e.preventDefault();
-                if (currentFocus > -1) {
-                    if (x) x[currentFocus].click();
+                function removeActive(x) {
+                    for (var i = 0; i < x.length; i++) {
+                        x[i].classList.remove("autocomplete-active");
+                    }
                 }
-            }
-        });
-        function addActive(x) {
-            if (!x) return false;
-            removeActive(x);
-            if (currentFocus >= x.length) currentFocus = 0;
-            if (currentFocus < 0) currentFocus = (x.length - 1);
-            x[currentFocus].classList.add("autocomplete-active");
-        }
-        function removeActive(x) {
-            for (var i = 0; i < x.length; i++) {
-                x[i].classList.remove("autocomplete-active");
-            }
-        }
-        function closeAllLists(elmnt) {
-            var x = document.getElementsByClassName("autocomplete-items");
-            for (var i = 0; i < x.length; i++) {
-                if (elmnt != x[i] && elmnt != inp) {
-                    x[i].parentNode.removeChild(x[i]);
+                function closeAllLists(elmnt) {
+                    var x = document.getElementsByClassName("autocomplete-items");
+                    for (var i = 0; i < x.length; i++) {
+                        if (elmnt != x[i] && elmnt != inp) {
+                            x[i].parentNode.removeChild(x[i]);
+                        }
+                    }
                 }
+                document.addEventListener("click", function (e) {
+                    closeAllLists(e.target);
+                });
             }
-        }
-        document.addEventListener("click", function (e) {
-            closeAllLists(e.target);
-        });
-    }
 
-    let jobList = []
+            let jobList = []
 
-    /*[# th:each="n : ${titles}"]*/
+            /*[# th:each="n : ${titles}"]*/
 
-    jobList.push("[(${n})]");
-    console.log(jobList)
+            jobList.push("[(${n})]");
+            console.log(jobList)
 
-    /*[/]*/
+            /*[/]*/
 
-        autocomplete(document.getElementById("job"), jobList);
-    const message = document.getElementById("message");
-    message.style.display="none"
+            autocomplete(document.getElementById("job"), jobList);
+            const message = document.getElementById("message");
+            message.style.display = "none"
 
-    function validateJobTitle() {
-        message.style.display="none"
+            function validateJobTitle() {
+                message.style.display = "none"
 
-        const input = document.getElementById("job");
-        let shouldSumbit = true;
+                const input = document.getElementById("job");
+                let shouldSumbit = true;
 
-        let inputValue = input.value;
-        if ((inputValue.trim()=="")||(inputValue==null)){
-            shouldSumbit = false
-            message.style.display=""
-            message.innerHTML="Please enter your query"
-            message.style.color="red"
-        } else {
-            if(!jobList.includes(inputValue)) {
-                shouldSumbit = false
-                message.style.display = ""
-                message.innerHTML = "Please select from the dropdown list"
-                message.style.color = "red"
+                let inputValue = input.value;
+                if ((inputValue.trim() == "") || (inputValue == null)) {
+                    shouldSumbit = false
+                    message.style.display = ""
+                    message.innerHTML = "Please enter your query"
+                    message.style.color = "red"
+                } else {
+                    if (!jobList.includes(inputValue)) {
+                        shouldSumbit = false
+                        message.style.display = ""
+                        message.innerHTML = "Please select from the dropdown list"
+                        message.style.color = "red"
+                    }
+                }
+
+                if (shouldSumbit) {
+                    document.getElementById("myForm").submit();
+                }
+
             }
-        }
+        </script>
+    </body>
 
-        if (shouldSumbit) {
-            document.getElementById("myForm").submit();
-        }
-
-    }
-</script>
-</body>
-
-<footer>
-    <div th:replace="fragments/layout.html :: footer" />
-</footer>
+    <footer>
+        <div th:replace="fragments/layout.html :: footer" />
+    </footer>
