myCourses and calendar bug fixed

--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature2-SearchCourse/watchCourse.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature2-SearchCourse/watchCourse.html
@@ -28,38 +28,10 @@
                     <td>
                         <main>
                             <div class="slide-read-more">
-                                <p style="font-weight: bold;" th:text="*{courseTitle}">Couse Title</p>
-                                <p th:text="'By ' + *{channelName} + ' on ' + *{date}">By Harvard on 18 July 2021</p>
+                                <p style="font-weight: bold;" th:text="*{courseTitle}"></p>
+                                <p th:text="'By ' + *{channelName} + ' on ' + *{date}"></p>
                                 <span th:text="*{description}">
-                                    Java is a programming language famous for its ability to compile to platform-independent bytecode.
-                                    It powers enterprise web apps, big data pipelines, and android mobile apps.
-
-                                    #java #programming #100SecondsOfCode
-
-                                    🔗 Resources
-
-                                    Java Website https://java.com
-                                    Star7 Demo https://youtu.be/1CsTH9S79qI
-
-                                    🔥 Get More Content - Upgrade to PRO
-
-                                    Upgrade to Fireship PRO at https://fireship.io/pro
-                                    Use code lORhwXd2 for 25% off your first payment.
-
-                                    🎨 My Editor Settings
-
-                                    - Atom One Dark
-                                    - vscode-icons
-                                    - Fira Code Font
-
-                                    🔖 Topics Covered
-
-                                    - How Java works
-                                    - Java basics
-                                    - History of Java
-                                    - Java vs C
-                                    - How to compile Java
-                                    - Overview of JVM, JRE, & JDK
+                                    
                                 </span>
                             </div>
                             <div class="slide-read-more-button read-more-button">Read More</div>
