19feb morning changes indicated by Joey

--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature2-SearchCourse/course-result.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature2-SearchCourse/course-result.html
@@ -24,7 +24,7 @@
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="#" onclick="sortByDuration(1);">1 - 2 hours</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="sortByDuration(1);">&#60 2 hours</a></li>
                         <li><a class="dropdown-item" href="#" onclick="sortByDuration(2);">2 - 3 hours</a></li>
                         <li><a class="dropdown-item" href="#" onclick="sortByDuration(3);">3+ hours</a></li>
                     </ul>
