--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/course.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/course.html
@@ -110,6 +110,11 @@
                 </td>
                 <!-- NEED FILTER BY ALPHABETICAL AND PROGRESS RATE -->
                 <td width="72%" style="position:static">
+                    <div th:if="${#lists.isEmpty(myCourseList)}">
+                        <span><b>
+                                <center> <b>"You have not saved any course. Start learning today!"</b></center>
+                            </b></span>
+                    </div>
                     <div id="wrap">
                         <table class="table table-borderless">
                             <tr th:each="course : ${myCourseList}">
