--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/course.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/course.html
@@ -112,7 +112,7 @@
                 <td width="72%" style="position:static">
                     <div th:if="${#lists.isEmpty(myCourseList)}">
                         <span><b>
-                                <center> <b>"You have not saved any course. Start learning today!"</b></center>
+                                <center> <b>You have not saved any course. Start learning today!</b></center>
                             </b></span>
                     </div>
                     <div id="wrap">
